# Notas

./: .gitignore  Cargo.toml  LICENSE  PASSWORD_RESET.md  README.md  build-deb.sh  build.sh  com.jegly.Notas.metainfo.xml  download-font.sh  icon-dock-fix  nocturne-notes.desktop  notas.desktop  snapcraft.yaml
debian/: changelog  control  copyright  postinst  postrm  rules
fonts/: README.md
src/: main.rs
src/core/: crypto.rs  data.rs  manager.rs  mod.rs
