[package]
name = "nocturne_notes"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Secure, lightweight, encrypted note-taking application."
authors = ["JEGLY"]

[package.metadata.deb]
maintainer = "JEGLY"
section = "utils"
priority = "optional"
assets = [
    ["target/release/nocturne_notes", "usr/bin/", "755"],
    ["nocturne-notes.desktop", "usr/share/applications/", "644"],
    ["nocturne-notes.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
]

[dependencies]
# GUI
gtk4 = { version = "0.7", package = "gtk4", features = ["v4_8"] }
libadwaita = { version = "0.5", features = ["v1_4"] }
# Asynchronous runtime
tokio = { version = "1", features = ["full"] }
async-channel = "2.3"
# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
# Cryptography
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
once_cell = "1.19"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
